# ReaderArchive

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  compose.build.yaml  compose.semantic-eval.yaml  compose.yaml  package.json
backend/: pyproject.toml
backend/app/: __init__.py  archiver.py  crud.py  lifespan.py  main.py  models.py  rss.py  semantic.py  service.py
backend/app/api/: deps.py  main.py  middleware.py
backend/app/api/routes/: archive_tasks.py  auth.py  browser.py  browser_auth.py  config.py  health.py  login.py  pages.py  rss_feeds.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/site_rules/: __init__.py  base.py  registry.py  wechat.py
backend/migrations/: env.py
backend/migrations/versions/: 20260619_0001_initial_schema.py  20260619_0002_app_settings.py  20260620_0003_semantic_search.py  20260620_0004_semantic_index_status.py  20260629_0005_rss_entry_keys.py  20260713_0006_manual_actions.py  20260713_0007_redact_error_tokens.py  20260713_0008_browser_tab_bindings.py
backend/scripts/: ensure_smoke_user.py  export_openapi.py  semantic_eval.py
backend/tests/: test_archive_api.py  test_browser_tab_reuse.py  test_manual_action_migration.py  test_rss.py  test_site_rules.py
docker/: single-file-existing-tab.patch  wrapped-chrome
docs/: manual-action-site-rules.md
frontend/: biome.json  index.html  openapi-ts.config.ts  openapi.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: archive_url.sh  frontend_smoke_check.mjs  verify_in_docker.sh  (+3 more)
(+39 files in other folders)
